--- a/examples/all.css
+++ b/examples/all.css
@@ -1,23 +1,5 @@
-@import "http://some.ru/external.css";
-@import "https://some.secure.ru/external.css";
-@import "/absolute.url.must.not.resolve.css";
+@import "b-includes/b-includes.css";
 
-@import 'http://some.ru/external.css';
-@import 'https://some.secure.ru/external.css';
-@import '/absolute.url.must.not.resolve.css';
-
-@import url("http://some.ru/external.css");
-@import url("https://some.secure.ru/external.css");
-@import url("/absolute.url.must.not.resolve.css");
-
-@import url('http://some.ru/external.css');
-@import url("https://some.secure.ru/external.css");
-@import url("/absolute.url.must.not.resolve.css");
-
-@import url(http://some.ru/external.css);
-@import url(https://some.secure.ru/external.css);
-@import url(/absolute.url.must.not.resolve.css);
-
-@import "b-includes/b-includes.css" screen and (max-device-width: 480px);
+@import "b-stylus/b-stylus.styl";
 
 /*@import "commented-url-must-be-deleted.css";*/
