added stylus nib support and files with .less extension are now treated as css

--- a/examples/b-stylus/b-stylus.styl
+++ b/examples/b-stylus/b-stylus.styl
@@ -1,2 +1,7 @@
 .b-stylus
-    margin: 0;
+    margin 0
+
+.b-stylus__border {
+    border-radius(5px);
+    background: linear-gradient(top, white, black);
+}
