Full refactoring to version 0.3.0

--- a/examples/all.css
+++ b/examples/all.css
@@ -2,4 +2,9 @@
 
 @import "b-stylus/b-stylus.styl";
 
+@import "b-less/b-less.less";
+
+@import "dfgdfgdf.css";
+@import "dfgdfgdf.css";
+
 /*@import "commented-url-must-be-deleted.css";*/
