--- a/examples/b-less/b-less-err.less
+++ b/examples/b-less/b-less-err.less
@@ -8,8 +8,8 @@
 .box-shadow(@style, @alpha: 50%) when (isnumber(@alpha)) {
   .box-shadow(@style, rgba(0, 0, 0, @alpha));
 }
-.box { 
+.box {
   color: saturate(@base, 5%);
   border-color: lighten(@base, 30%);
-  div { .box-shadow(0 0 5px, 30%) }
+  div { .box-shadow(0 0 5px, 30%) 
 }
