--- a/examples/_all.css
+++ b/examples/_all.css
@@ -94,12 +94,7 @@
 .b-stylus__border {
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #000));
-  background: -webkit-linear-gradient(top, #fff 0%, #000 100%);
-  background: -moz-linear-gradient(top, #fff 0%, #000 100%);
-  background: -o-linear-gradient(top, #fff 0%, #000 100%);
-  background: -ms-linear-gradient(top, #fff 0%, #000 100%);
-  background: linear-gradient(top, #fff 0%, #000 100%);
+  background: linear-gradient(top, #fff, #000);
 }
 
 
