--- a/examples/_all.css
+++ b/examples/_all.css
@@ -92,6 +92,8 @@
   margin: 0;
 }
 .b-stylus__border {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
   background: linear-gradient(top, #fff, #000);
 }
 
