Fixed bug with replacing '../font/fontawesome-webfont.eot?#iefix&v=3.2.1' urls.

--- a/examples/b-resources/b-resources.css
+++ b/examples/b-resources/b-resources.css
@@ -4,7 +4,7 @@
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: normal;
-  src: local('PT Sans'), local('PTSans'), url('b-resources.woff') format('woff');
+  src: local('PT Sans'), local('PTSans'), url('b-resources.woff?#iefix&v=3.2.1') format('woff');
 }
 
 @font-face {
