--- a/examples/_all.css
+++ b/examples/_all.css
@@ -35,7 +35,7 @@
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: normal;
-  src: local('PT Sans'), local('PTSans'), url("b-resources/b-resources.woff") format('woff');
+  src: local('PT Sans'), local('PTSans'), url("b-resources/b-resources.woff?#iefix&v=3.2.1") format('woff');
 }
 
 @font-face {
